--- a/.github/workflows/docker-compose.yml
+++ b/.github/workflows/docker-compose.yml
@@ -40,22 +40,20 @@ jobs:
       - uses: actions/checkout@v3
       - name: Build the Docker image
       # - uses: actions/checkout@v2
-      - uses: docker/setup-buildx-action@v1
+      # - uses: docker/setup-buildx-action@v1
         # 构建镜像，指定镜像名
-      - name: Build Docker Images
-        run: 
-          docker-compose up
-          echo '=====镜像构建结束====='
+      # - name: Build Docker Images
+        run: docker-compose up
+        # echo '=====镜像构建结束====='
 
       # 登录到 dockerhub，使用 GitHub secrets 传入账号密码，密码被加密存储在 GitHub 服务器
       - name: Login to DockerHub
-        uses: docker/login-action@v1
+      - uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_HUB_USER_NAME }}
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
       - name: Push Docker Image
-        run:
-          docker-compose push
-          echo '=====镜像上传结束====='
+        run: docker-compose push
+          # echo '=====镜像上传结束====='
 
