--- a/.github/workflows/docke.yml
+++ b/.github/workflows/docke.yml
@@ -21,9 +21,7 @@ jobs:
       - uses: actions/checkout@v2
         # 构建镜像，指定镜像名
       - name: Build Docker Images
-        run: |
-          docker-compose up
-          echo '=====镜像构建结束====='
+        run: docker-compose up
 
       # 登录到 dockerhub，使用 GitHub secrets 传入账号密码，密码被加密存储在 GitHub 服务器
       - name: Login to DockerHub
@@ -33,6 +31,4 @@ jobs:
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
       - name: Push Docker Image
-        run: |
-          docker-compose push
-          echo '=====镜像上传结束====='
+        run: docker-compose push
