--- a/.github/workflows/docke.yml
+++ b/.github/workflows/docke.yml
@@ -1,17 +1,12 @@
-name: Docker Image CI
+name: Docker Compose CI
 
 on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+  workflow_dispatch:
 
 jobs:
-
-  build:
-
+  docker:
     runs-on: ubuntu-latest
-
+    
     # steps:
     # - uses: actions/checkout@v3
     # - name: Build the Docker image
