--- a/.github/workflows/docke.yml
+++ b/.github/workflows/docke.yml
@@ -13,18 +13,18 @@ jobs:
     #   run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
 
     steps:
-    - uses: actions/checkout@v2
+      - 
+        uses: actions/checkout@v2
         # 构建镜像，指定镜像名
-    - name: Build Docker Images
-      run: docker-compose up
+        name: Build Docker Images
+        run: docker-compose up
 
       # 登录到 dockerhub，使用 GitHub secrets 传入账号密码，密码被加密存储在 GitHub 服务器
       
-    - uses: docker/login-action@v1
-    - name: Login to DockerHub
-      with:
-        username: ${{ secrets.DOCKER_HUB_USER_NAME }}
-        password: ${{ secrets.DOCKER_HUB_PASSWORD }}
-
-      # - name: Push Docker Image
-      run: docker-compose push
+      - 
+        uses: docker/login-action@v1
+        name: Login to DockerHub
+        with:
+          username: ${{ secrets.DOCKER_HUB_USER_NAME }}
+          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+        run: docker-compose push
