--- a/.github/workflows/docke.yml
+++ b/.github/workflows/docke.yml
@@ -12,19 +12,39 @@ jobs:
     # - name: Build the Docker image
     #   run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
 
-    steps:
-      - 
-        uses: actions/checkout@v2
-        # 构建镜像，指定镜像名
-        name: Build Docker Images
-        run: docker-compose up
+    # steps:
+    #   - 
+    #     uses: actions/checkout@v2
+    #     # 构建镜像，指定镜像名
+    #     name: Build Docker Images
+    #     run: docker-compose up
 
-      # 登录到 dockerhub，使用 GitHub secrets 传入账号密码，密码被加密存储在 GitHub 服务器
+    #   # 登录到 dockerhub，使用 GitHub secrets 传入账号密码，密码被加密存储在 GitHub 服务器
       
-      - 
-        uses: docker/login-action@v1
-        name: Login to DockerHub
-        with:
-          username: ${{ secrets.DOCKER_HUB_USER_NAME }}
-          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
-        run: docker-compose push
+    #   - 
+    #     uses: docker/login-action@v1
+    #     name: Login to DockerHub
+    #     with:
+    #       username: ${{ secrets.DOCKER_HUB_USER_NAME }}
+    #       password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+    #     run: docker-compose push
+
+    steps:
+          -
+            name: Set up QEMU
+            uses: docker/setup-qemu-action@v1
+          -
+            name: Set up Docker Buildx
+            uses: docker/setup-buildx-action@v1
+          -
+            name: Compose up Docker Build
+            run: docker-compose up
+          -
+            name: Login to DockerHub
+            uses: docker/login-action@v1 
+            with:
+              username: ${{ secrets.DOCKERHUB_USER }}
+              password: ${{ secrets.DOCKERHUB_PASS }}
+          -
+            name: Build and push
+            run: docker-compose push
