--- a/.github/workflows/docke.yml
+++ b/.github/workflows/docke.yml
@@ -34,10 +34,9 @@ jobs:
             name: Set up QEMU
             uses: docker/setup-qemu-action@v1
           -
-            name: Set up Docker Buildx
-            uses: docker/setup-buildx-action@v1
-          -
-            name: Compose up Docker Build
+            # name: Set up Docker Buildx
+            # uses: docker/setup-buildx-action@v1
+            name: Compose Docker Buildx
             run: docker-compose up
           -
             name: Login to DockerHub
