--- a/.github/workflows/docke.yml
+++ b/.github/workflows/docke.yml
@@ -9,15 +9,15 @@ jobs:
     steps:
           -
             name: Set up QEMU
-            uses: docker/setup-qemu-action@v1
+            uses: docker/setup-qemu-action@v3
           -
-            # name: Set up Docker Buildx
-            # uses: docker/setup-buildx-action@v1
+            # name: Set up Docker Build
             name: Compose Docker Buildx
+            # uses: docker/setup-buildx-action@v3
             run: docker-compose up
           -
             name: Login to DockerHub
-            uses: docker/login-action@v1 
+            uses: docker/login-action@v3
             with:
               username: ${{ secrets.DOCKERHUB_USER }}
               password: ${{ secrets.DOCKERHUB_PASS }}
