--- a/.github/workflows/docke.yml
+++ b/.github/workflows/docke.yml
@@ -8,8 +8,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
           -
-            name: Set up QEMU
-            uses: docker/setup-qemu-action@v3
+            # name: Set up QEMU
+            # uses: docker/setup-qemu-action@v3
+            run: docker-compose up
           -
             # name: Set up Docker Build
             name: Compose Docker Buildx
