--- a/.github/workflows/docke.yml
+++ b/.github/workflows/docke.yml
@@ -15,7 +15,8 @@ jobs:
             # name: Set up Docker Build
             name: Compose Docker Buildx
             # uses: docker/setup-buildx-action@v3
-            run: docker-compose up
+            run: |
+              docker-compose up
           -
             name: Login to DockerHub
             uses: docker/login-action@v1
@@ -24,4 +25,5 @@ jobs:
               password: ${{ secrets.DOCKERHUB_PASS }}
           -
             name: Build and push
-            run: docker-compose push
+            run: |
+              docker-compose push
