--- a/.github/workflows/docke.yml
+++ b/.github/workflows/docke.yml
@@ -1,29 +1,20 @@
-name: Docker Compose CI
-
 on:
-  workflow_dispatch:
-
+  push:
+   branches: [ master ]
+  pull_request:
+    branches: [ master ]
+      
 jobs:
-  docker:
+  build:
+
     runs-on: ubuntu-latest
+
     steps:
-          -
-            # name: Set up QEMU
-            # uses: docker/setup-qemu-action@v3
-            run: docker-compose up
-          -
-            # name: Set up Docker Build
-            name: Compose Docker Buildx
-            # uses: docker/setup-buildx-action@v3
-            run: |
-              docker-compose up
-          -
-            name: Login to DockerHub
-            uses: docker/login-action@v1
-            with:
-              username: ${{ secrets.DOCKERHUB_USER }}
-              password: ${{ secrets.DOCKERHUB_PASS }}
-          -
-            name: Build and push
-            run: |
-              docker-compose push
+    - uses: actions/checkout@v1
+    - name: Build & Push Image
+      run: |
+        echo "${{ secrets.DOCKERPW }}" | docker login -u "abcsy" --password-Syw!888888 
+        # docker image build -t dab8106/pyflask:latest .
+        # docker push dab8106/pyflask:latest
+        docker compose up -d
+        docker compose push
