--- a/.github/workflows/docke.yml
+++ b/.github/workflows/docke.yml
@@ -16,5 +16,5 @@ jobs:
         echo "${{ secrets.DOCKERPW }}" | docker login -u "abcsy" --password-Syw!888888 
         # docker image build -t dab8106/pyflask:latest .
         # docker push dab8106/pyflask:latest
-        docker compose up -d
-        docker compose push
+        docker-compose up
+        docker-compose push
