--- a/.github/workflows/docker-image1.yml
+++ b/.github/workflows/docker-image1.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: Build & Push Image
       run: |
-        echo "${{ secrets.DOCKERPW }}" | docker login -u "abcsy" -p "Syw!888888"
+        echo "${{ secrets.DOCKERPW }}" | docker login -u "abcsy" --password-stdin
         # docker image build -t dab8106/pyflask:latest .
         # docker push dab8106/pyflask:latest
         docker compose up -d
