--- a/.github/workflows/docker-image1.yml
+++ b/.github/workflows/docker-image1.yml
@@ -1,10 +1,7 @@
 name: Docker Compose CI
 
 on:
-  push:
-   branches: [ master ]
-  pull_request:
-    branches: [ master ]
+  workflow_dispatch:
       
 jobs:
   build:
